tests/machine/x/cobol/cast_struct.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. CAST_STRUCT.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 TODO.
           05 TITLE PIC X(2) VALUE "hi".
       PROCEDURE DIVISION.
       DISPLAY TITLE
       STOP RUN.
